# bigmind

./: .commit-template.txt  .env.local.example  .eslintignore  .eslintrc.cjs  .gitignore  .releaserc  ADMIN_APPROVAL_FIX.md  ALL_IN_FEATURES_GUIDE.md  ANALYSE_TAGS_COMMITS.md  ANALYSE_TAGS_EXHAUSTIVE.md  ASSISTANT_DEVELOPPEUR_GUIDE_COMPLET.md  BigMind Plugin ux-ui phase3.md  BigMind_Phase4_Storage_Distribution_v2.md  CHANGELOG.md  CHANGELOG_PHASE2.md  DEPLOYMENT_ASSETS_README.md  DEPLOYMENT_GUIDE.md  DEPLOY_ADMIN_MIGRATION.md  DEVELOPER_GUIDE.md  DEVELOPER_MODE_IMPLEMENTATION.md  DISABLE_RLS_PERMANENT.sql  EDGE_FUNCTIONS_SETUP.md  FEATURES_UNIMPLEMENTED.md  FEAT_PLUGIN_MARKETPLACE.md  FIX_GRANTS.sql  FIX_SUPABASE_401_GUIDE.md  GISCUS_SETUP.md  GITHUB_OAUTH_SETUP.md  GITHUB_RENAME_GUIDE.md  GIT_ALIASES_CHEATSHEET.md  IMPLEMENTATION_PLAN_TAGS.md  INDEX_ANALYSE_TAGS.md  MAPPING_FICHIERS_COMMITS.md  MARKETPLACE_ARCHITECTURE.md  MARKETPLACE_TEST_REPORT.md  MIGRATION_ANALYSIS_EXHAUSTIVE.md  MIGRATION_BIGMIND_TO_CARTAE.md  MIGRATION_COMPLETE.md  MIGRATION_PLUGIN_IDS_GUIDE.md  MIGRATION_STATUS.md  (+72 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  pre-commit
.specstory/: .gitignore
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
docs/: PLUGIN_STORAGE.md
logs/: .gitignore
scripts/: 01-quick-commit.sh  01-setup-dev-environment.sh  02-debug-and-commit.sh  03-create-release.sh  04-rebuild-release.sh  04-smart-pre-commit.sh  05-fix-eslint.sh  05-quick-commit.sh  06-detect-refactor.sh  08-setup-dev-environment.sh  README.md  (+11 more)
(+451 files in other folders)
