[package]
name = "bigmind-desktop"
version = "0.1.0"
description = "BigMind desktop app"
authors = ["BigMind"]
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


